# productivity-crew

./: .gitignore  .pre-commit-config.yaml  README.md  env.example  mypy.ini  pyproject.toml  ruff.toml
configs/: single_team_fintech.yaml
configs/schemas/: mail_message.schema.json  ticket.schema.json
debug_logs/session_20250810_183529/export_bundler/: repository_state.json
debug_logs/session_20250810_183529/industry_selection/: industry_selector_parsed.json  industry_selector_raw.txt  repository_state.json
debug_logs/session_20250810_183529/mailbox_generation/: mailbox_generator_error.txt  mailbox_generator_raw.txt  repository_state.json
debug_logs/session_20250810_183529/org_design/: org_designer_parsed.json  org_designer_raw.txt  repository_state.json
debug_logs/session_20250810_183529/product_strategy/: product_director_parsed.json  product_director_raw.txt  repository_state.json
debug_logs/session_20250810_183529/qa_audit/: repository_state.json
debug_logs/session_20250810_183529/sprint_planning/: repository_state.json  sprint_planner_parsed.json  sprint_planner_raw.txt
debug_logs/session_20250810_183529/ticket_generation/: repository_state.json  ticket_factory_parsed.json  ticket_factory_raw.txt  transform_raw_ticket.json  transform_transformed_ticket.json
debug_logs/session_20250810_183529/unknown/: unknown_parsed.json  unknown_raw.txt
debug_logs/session_20250810_184215/export_bundler/: repository_state.json
debug_logs/session_20250810_184215/industry_selection/: industry_selector_parsed.json  industry_selector_raw.txt  repository_state.json
src/agents/: base.py  export_bundler.py  industry_selector.py  mailbox_generator.py  org_designer.py  product_director.py  qa_auditor.py  sprint_planner.py  ticket_factory.py
src/app/: logging.py  main.py  settings.py
src/cli/: generate.py
src/exporters/: json_exporter.py  jsonl_exporter.py
src/industry_packs/: fintech_saas.py  registry.py
src/okg/: ids.py  models.py  repo.py  validators.py
src/personas/: base.py  jr_engineer.py  manager.py  registry.py  sr_engineer.py  team_lead.py
src/sources/: base.py
src/utils/: debug_logger.py  hashing.py  redact.py  sample.py  timebox.py
src/workflows/: checkpoint.py  single_team_manager.py
tests/e2e/: test_single_team_e2e.py
tests/unit/: test_ids.py  test_persona_registry.py  test_validators.py
(+249 files in other folders)
